# EmbarcaTechResU1RevOhm

./: .gitignore  CMakeLists.txt  Ohmimetro01.c
